--- a/app/src/main/res/layout/activity_code_editor_tabbed.xml
+++ b/app/src/main/res/layout/activity_code_editor_tabbed.xml
@@ -33,6 +33,7 @@
             android:id="@+id/editorToolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            app:titleTextColor="@color/code_editor_white"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             app:titleTextAppearance="@style/Toolbar.TitleText">
@@ -48,7 +49,7 @@
                 android:id="@+id/codeInputTextView"
                 android:layout_row="0"
                 android:layout_column="0"
-                android:textColor="@color/white"
+                android:textColor="@color/code_editor_white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
             </TextView>
@@ -57,7 +58,7 @@
                 android:layout_column="0"
                 android:layout_row="1"
                 android:textAlignment="viewStart"
-                android:textColor="@color/white"
+                android:textColor="@color/code_editor_white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
             </TextView>
