--- a/app/src/main/res/layout/activity_email_sign_in.xml
+++ b/app/src/main/res/layout/activity_email_sign_in.xml
@@ -40,6 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/forgotPasswordTextView"
         android:onClick="signInClicked"
+        android:background="@drawable/googlesignin_button_shape"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:text="Go">
@@ -56,8 +57,10 @@
         android:id="@+id/forgotPasswordTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/passwordShowHideImageView"
         android:text="Forgot Password?"
         android:layout_below="@id/passwordEditText"
+        android:layout_marginLeft="30dp"
         android:clickable="true"
         android:onClick="forgotPasswordClicked"
         android:textAlignment="viewEnd"
