--- a/app/src/main/res/layout/add_new_code_dialog.xml
+++ b/app/src/main/res/layout/add_new_code_dialog.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:padding="20dp"
-        android:hint="Pseudocode Title"
+        android:hint="Title"
         android:inputType="text"/>
     <EditText
         android:id="@+id/descriptionEditText"
