--- a/app/src/main/res/layout/code_list_item.xml
+++ b/app/src/main/res/layout/code_list_item.xml
@@ -8,10 +8,9 @@
         android:id="@+id/codeListItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/item_rounded_corner"
-        android:textColor="@color/black"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:textColor="@color/indigo"
         android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
         android:paddingRight="?android:attr/expandableListPreferredItemPaddingLeft"
         android:textSize="16dp"/>
