--- a/app/src/main/res/layout/edit_post_details_dialog.xml
+++ b/app/src/main/res/layout/edit_post_details_dialog.xml
@@ -21,6 +21,17 @@
         android:layout_marginBottom="20dp"
         android:hint="Description"
         android:inputType="textMultiLine"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:padding="20dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="viewStart"
+            android:text="Select Input">
+        </TextView>
     <Spinner
         android:id="@+id/postInputSpinner"
         android:spinnerMode="dialog"
@@ -30,7 +41,19 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:layout_gravity="center_horizontal"/>
-    <Spinner
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:padding="20dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="viewStart"
+            android:text="Select Output">
+        </TextView>
+        <Spinner
         android:id="@+id/postOutputSpinner"
         android:spinnerMode="dialog"
         android:prompt="@string/hint_output_resource"
@@ -39,4 +62,5 @@
         android:layout_marginBottom="20dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"/>
+    </LinearLayout>
 </LinearLayout>
