--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,8 +20,8 @@
   <Button
       android:id="@+id/emailButton"
       android:layout_width="match_parent"
-      android:layout_height="40dp"
-      android:layout_marginBottom="150dp"
+      android:layout_height="50dp"
+      android:layout_marginBottom="300dp"
       android:layout_marginLeft="15dp"
       android:layout_marginRight="15dp"
       android:adjustViewBounds="true"
@@ -29,7 +29,7 @@
       android:onClick="signInWithEmailClicked"
       android:scaleType="centerInside"
       android:text="Continue with email"
-      android:background="@drawable/googlesignin_button_shape"
+      android:backgroundTint="@color/fire_brick"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.5"
@@ -37,20 +37,44 @@
   <Button
       android:id="@+id/googleButton"
       android:layout_width="match_parent"
-      android:layout_height="40dp"
-      android:layout_marginBottom="80dp"
+      android:layout_height="50dp"
+      android:layout_marginTop="20dp"
       android:layout_marginLeft="15dp"
       android:layout_marginRight="15dp"
       android:text="Continue with Google"
-      android:background="@drawable/googlesignin_button_shape"
+      app:background="@drawable/googlesignin_button_shape"
       android:backgroundTint="@color/code_editor_white"
       android:drawableLeft="@drawable/googlesignin_image"
       android:onClick="signInWithGoogleClicked"
       android:scaleType="fitXY"
       android:adjustViewBounds="true"
-      app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/emailButton" />
+  <View
+      android:id="@+id/divider"
+      android:layout_width="match_parent"
+      android:layout_height="1dp"
+      android:paddingTop="10dp"
+      android:layout_marginTop="10dp"
+      android:layout_marginLeft="15dp"
+      android:layout_marginRight="15dp"
+      app:layout_constraintTop_toBottomOf="@id/googleButton"
+      android:background="@android:color/darker_gray"/>
+  <Button
+      android:id="@+id/guestButton"
+      android:layout_width="match_parent"
+      android:layout_height="45dp"
+      android:layout_marginLeft="15dp"
+      android:layout_marginTop="20dp"
+      android:layout_marginRight="15dp"
+      android:text="Continue as Guest"
+      android:backgroundTint="@color/code_editor_white"
+      android:scaleType="fitXY"
+      android:adjustViewBounds="true"
+      app:layout_constraintTop_toBottomOf="@id/divider"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.5"
+      app:layout_constraintStart_toStartOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
