--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -70,6 +70,7 @@
       android:layout_marginTop="20dp"
       android:layout_marginRight="15dp"
       android:text="Continue as Guest"
+      android:onClick="signInAsGuestClicked"
       android:backgroundTint="@color/code_editor_white"
       android:scaleType="fitXY"
       android:adjustViewBounds="true"
@@ -77,4 +78,33 @@
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintStart_toStartOf="parent"/>
+  <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal"
+      app:layout_constraintBottom_toBottomOf="parent"
+      android:layout_marginBottom="15dp">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:text="Privacy Policy"
+        android:clickable="true"
+        android:onClick="privacyPolicyClicked"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:layout_weight="5">
+    </TextView>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:text="Terms of Use"
+        android:onClick="termsOfUseClicked"
+        android:clickable="true"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:layout_weight="5">
+    </TextView>
+  </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
