--- a/app/src/main/res/menu/nav_drawer_menu.xml
+++ b/app/src/main/res/menu/nav_drawer_menu.xml
@@ -3,24 +3,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:showIn="navigation_view">
-        <group android:id="@+id/menu_top"
-            android:checkableBehavior="none">
+        <group
+                android:id="@+id/menu_bottom"
+                android:checkableBehavior="none">
+                <item android:id="@+id/nav_privacyPolicy" android:title="Privacy Policy">
+                </item>
+                <item android:id="@+id/nav_termsConditions" android:title="Terms of Use">
+                </item>
                 <item android:id="@+id/nav_usingThisApp"
                     android:title="Using PseudoGen"
                     android:icon="@drawable/using_pseudogen_icon">
-                </item>
-                <item android:id="@+id/nav_syntax"
-                    android:title="Syntax"
-                    android:icon="@drawable/syntax_icon">
                 </item>
                 <item android:id="@+id/nav_examples"
                     android:title="Examples"
                     android:icon="@drawable/example_icon">
                 </item>
-        </group>
-        <group
-                android:id="@+id/menu_bottom"
-                android:checkableBehavior="none">
                 <item
                     android:id="@+id/nav_developer"
                     android:icon="@drawable/developer_icon"
@@ -30,11 +27,6 @@
                     android:id="@+id/nav_rateApp"
                     android:icon="@drawable/rate_app_icon"
                     android:title="Rate App">
-                </item>
-                <item
-                    android:id="@+id/nav_sendFeedback"
-                    android:title="Send Feedback"
-                    android:icon="@drawable/feedback_icon">
                 </item>
                 <item
                     android:id="@+id/nav_logOut"
