--- a/app/src/main/res/layout/activity_central.xml
+++ b/app/src/main/res/layout/activity_central.xml
@@ -66,7 +66,7 @@
                 android:choiceMode="singleChoice"
                 android:padding="10dp"
                 android:layout_weight="1"
-                android:divider="@android:color/darker_gray"
+                android:divider="@color/code_editor_dark"
                 android:dividerHeight="10.0sp"
                 app:layout_constraintTop_toBottomOf="parent"
                 app:layout_constraintBottom_toTopOf="@+id/bottomNavView"
