--- a/app/src/main/res/layout/example_code_title.xml
+++ b/app/src/main/res/layout/example_code_title.xml
@@ -4,13 +4,18 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <TextView
-        android:id="@+id/exampleTitle"
         android:layout_width="0dp"
-        android:layout_height="70dp"
-        android:layout_weight="5"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
+        android:layout_height="match_parent"
+        android:layout_weight="4"
+        android:height="0dp">
+    </TextView>
+    <CheckBox
+        android:id="@+id/exampleTitleCheckBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:focusable="false"
+        android:layout_weight="6"
+        android:layoutDirection="rtl"
         android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
-        android:textColor="@color/code_editor_dark"
-        android:textSize="22dp" />
+        android:textColor="@color/code_editor_dark" />
 </LinearLayout>
