--- a/app/src/main/res/layout/example_code_title.xml
+++ b/app/src/main/res/layout/example_code_title.xml
@@ -12,7 +12,7 @@
     <CheckBox
         android:id="@+id/exampleTitleCheckBox"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:focusable="false"
         android:layout_weight="6"
         android:layoutDirection="rtl"
