--- a/app/src/main/res/layout/activity_using_pseudogen.xml
+++ b/app/src/main/res/layout/activity_using_pseudogen.xml
@@ -27,7 +27,7 @@
                 <TableRow>
                     <TextView
                         android:layout_column="0"
-                        android:text="KEYWORDS"
+                        android:text="LIST OF KEYWORDS"
                         android:padding="3dip">
                     </TextView>
                 </TableRow>
@@ -37,12 +37,6 @@
                         android:layout_height="wrap_content"
                         android:text="process, endprocess"
                         android:padding="3dip" />
-                    <TextView
-                        android:layout_column="0"
-                        android:gravity="right"
-                        android:layout_height="wrap_content"
-                        android:text="Start and End statements"
-                        android:padding="3dip" />
                 </TableRow>
                 <View
                     android:layout_height="2dip"
@@ -50,11 +44,7 @@
                 <TableRow>
                     <TextView
                         android:layout_column="0"
-                        android:text="Initialize, Let"
-                        android:padding="3dip" />
-                    <TextView
-                        android:text="Initialize, declare"
-                        android:gravity="right"
+                        android:text="initialize, let"
                         android:padding="3dip" />
                 </TableRow>
                 <View
@@ -65,10 +55,6 @@
                         android:layout_column="0"
                         android:text="if, then, else"
                         android:padding="3dip" />
-                    <TextView
-                        android:text="Conditional Statements"
-                        android:gravity="right"
-                        android:padding="3dip" />
                 </TableRow>
 
                 <View
@@ -78,10 +64,6 @@
                     <TextView
                         android:text="for, endloop"
                         android:padding="3dip" />
-                    <TextView
-                        android:text="Iteration with for"
-                        android:gravity="right"
-                        android:padding="3dip" />
                 </TableRow>
                 <View
                     android:layout_height="2dip"
@@ -90,18 +72,10 @@
                     <TextView
                         android:text="do, while, endwhile"
                         android:padding="3dip" />
-                    <TextView
-                        android:text="Iteration with while"
-                        android:gravity="right"
-                        android:padding="3dip" />
                 </TableRow>
                 <TableRow>
                     <TextView
                         android:text="repeat, until"
-                        android:padding="3dip" />
-                    <TextView
-                        android:text="Iteration with post condition"
-                        android:gravity="right"
                         android:padding="3dip" />
                 </TableRow>
                 <View
@@ -112,9 +86,54 @@
                         android:layout_column="0"
                         android:text="function, call"
                         android:padding="3dip" />
+                </TableRow>
+                <View
+                    android:layout_height="2dip"
+                    android:background="#FF909090" />
+            </TableLayout>
+            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:padding="20dp"
+                android:layout_height="match_parent"
+                android:stretchColumns="1">
+                <TableRow>
                     <TextView
-                        android:text="Create adn call the function"
-                        android:gravity="right"
+                        android:layout_column="0"
+                        android:text="LIST OF OPERATORS"
+                        android:padding="3dip">
+                    </TextView>
+                </TableRow>
+                <TableRow>
+                    <TextView
+                        android:layout_column="0"
+                        android:layout_height="wrap_content"
+                        android:text=" = (assignment operator)"
+                        android:padding="3dip" />
+                </TableRow>
+                <View
+                    android:layout_height="2dip"
+                    android:background="#FF909090" />
+                <TableRow>
+                    <TextView
+                        android:layout_column="0"
+                        android:text=" +,-  (add, subtract)"
+                        android:padding="3dip" />
+                </TableRow>
+                <View
+                    android:layout_height="2dip"
+                    android:background="#FF909090" />
+                <TableRow>
+                    <TextView
+                        android:layout_column="0"
+                        android:text=" *, /  (multiply, divide)"
+                        android:padding="3dip" />
+                </TableRow>
+                <View
+                    android:layout_height="2dip"
+                    android:background="#FF909090" />
+                <TableRow>
+                    <TextView
+                        android:text="and, or (logical operators)"
                         android:padding="3dip" />
                 </TableRow>
                 <View
