--- a/app/src/main/res/layout/challenge_code_title.xml
+++ b/app/src/main/res/layout/challenge_code_title.xml
@@ -3,19 +3,16 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="4"
-        android:height="0dp">
-    </TextView>
     <CheckBox
         android:id="@+id/exampleTitleCheckBox"
         android:layout_width="wrap_content"
         android:layout_height="70dp"
         android:focusable="false"
+        android:clickable="false"
         android:layout_weight="6"
         android:layoutDirection="rtl"
         android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
+        android:paddingRight="15dp"
+        android:textSize="22dp"
         android:textColor="@color/code_editor_dark" />
 </LinearLayout>
