--- a/app/src/main/res/layout/code_list_title.xml
+++ b/app/src/main/res/layout/code_list_title.xml
@@ -8,8 +8,7 @@
         android:layout_width="0dp"
         android:layout_height="70dp"
         android:layout_weight="5"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
+        android:gravity="center_vertical"
         android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
         android:textColor="@color/code_editor_dark"
         android:textSize="22dp" />
