--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:paddingLeft="16dp"
             android:fontFamily="@font/maven_pro_medium"
-            android:textColor="@color/dark_orange"
+            android:textColor="@color/bright_orange"
             android:textSize="20dp"
             android:textStyle="bold"
             android:text="PseudoGen">
