--- a/app/src/main/res/layout/add_new_code_dialog.xml
+++ b/app/src/main/res/layout/add_new_code_dialog.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:minHeight="400dp"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:minHeight="400dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
     <EditText
         android:id="@+id/titleEditText"
         android:layout_width="match_parent"
@@ -67,4 +69,5 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"/>
     </LinearLayout>
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
