--- a/app/src/main/res/layout/edit_post_details_dialog.xml
+++ b/app/src/main/res/layout/edit_post_details_dialog.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+<LinearLayout
     android:layout_width="fill_parent"
     android:minHeight="400dp"
     android:layout_height="match_parent"
@@ -63,4 +65,5 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"/>
     </LinearLayout>
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
