--- a/app/src/main/res/layout/activity_editor_settings.xml
+++ b/app/src/main/res/layout/activity_editor_settings.xml
@@ -1,9 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/code_editor_white"
+    android:orientation="vertical"
     tools:context=".EditorSettingsActivity">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.appcompat.widget.Toolbar
+        android:layout_width="match_parent"
+        android:id="@+id/editorSettingsToolbar"
+        android:background="@color/indigo"
+        app:titleTextColor="@color/bright_orange"
+        android:layout_height="?attr/actionBarSize">
+    </androidx.appcompat.widget.Toolbar>
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/settingsAdView"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_marginTop="2dp"
+        android:layout_height="wrap_content"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
+    </com.google.android.gms.ads.AdView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="30dp"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:layout_weight="6"
+            android:textSize="20dp"
+            android:text="Theme">
+        </TextView>
+        <Spinner
+            android:id="@+id/themeSpinner"
+            android:layout_weight="4"
+            android:layoutDirection="rtl"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content">
+        </Spinner>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="30dp"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:layout_weight="6"
+            android:textSize="20dp"
+            android:text="Font Type">
+        </TextView>
+        <Spinner
+            android:id="@+id/fontStyleSpinner"
+            android:layout_weight="4"
+            android:layoutDirection="rtl"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content">
+        </Spinner>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="30dp"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:textSize="20dp"
+            android:gravity="center_vertical"
+            android:layout_weight="6"
+            android:text="Font Size">
+        </TextView>
+        <Spinner android:id="@+id/fontSizeSpinner"
+            android:layout_weight="4"
+            android:layoutDirection="rtl"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content">
+        </Spinner>
+    </LinearLayout>
+    <Button
+        android:layout_width="100dp"
+        android:layout_height="60dp"
+        android:layout_gravity="center_horizontal"
+        android:text="Set"
+        android:onClick="setEditorSettingsClicked"
+        android:padding="15dp"
+        android:layout_marginTop="100dp">
+    </Button>
+</LinearLayout>
