--- a/app/src/main/res/menu/nav_drawer_menu.xml
+++ b/app/src/main/res/menu/nav_drawer_menu.xml
@@ -35,17 +35,13 @@
                     android:icon="@drawable/developer_icon"
                     android:title="Developer">
                 </item>
-                <item  android:id="@+id/nav_sendFeedback"
-                        android:title="Send Feedback"
-                    android:icon="@drawable/feedback_icon">
-                </item>
                 <item
                     android:id="@+id/nav_rateApp"
                     android:icon="@drawable/rate_app_icon"
                     android:title="Rate App">
                 </item>
                 <item
-                    android:id="@+id/nav_logOut"
+                    android:id="@+id/nav_signOut"
                     android:icon="@drawable/icon_sign_out"
                     android:title="Sign Out">
                 </item>
