--- a/app/src/main/res/layout/activity_email_sign_in.xml
+++ b/app/src/main/res/layout/activity_email_sign_in.xml
@@ -45,13 +45,25 @@
         android:layout_marginTop="30dp"
         android:text="Go">
     </Button>
+    <TextView
+        android:layout_width="120dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/emailSignInButton"
+        android:clickable="true"
+        android:onClick="signUpClicked"
+        android:textAlignment="center"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:textSize="20dp"
+        android:text="Or, Sign Up">
+    </TextView>
     <ImageView
         android:id="@+id/passwordShowHideImageView"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_below="@+id/passwordEditText"
         android:paddingEnd="30px"
-        android:src="@drawable/showpassword"
+        android:src="@drawable/visible_off_icon"
         android:onClick="showPasswordClicked"/>
     <TextView
         android:id="@+id/forgotPasswordTextView"
