--- a/app/src/main/res/layout/activity_using_pseudogen.xml
+++ b/app/src/main/res/layout/activity_using_pseudogen.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/code_editor_white"
@@ -13,6 +14,15 @@
             android:layout_width="wrap_content"
             android:orientation="vertical"
             android:layout_height="wrap_content">
+            <com.google.android.gms.ads.AdView
+                android:id="@+id/usingPseudoGenAdView"
+                android:layout_gravity="center_horizontal"
+                android:layout_width="match_parent"
+                android:layout_marginTop="2dp"
+                android:layout_height="wrap_content"
+                ads:adSize="BANNER"
+                ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
+            </com.google.android.gms.ads.AdView>
             <TextView
                 android:id="@+id/usingPseudoGenTextView"
                 android:layout_width="match_parent"
