--- a/app/src/main/res/drawable/nav_drawer_item_bg.xml
+++ b/app/src/main/res/drawable/nav_drawer_item_bg.xml
@@ -2,7 +2,7 @@
 
     <item>
         <shape android:shape="rectangle" >
-            <solid android:color="@color/blue_angel" />
+            <solid android:color="@color/light_grey" />
         </shape>
     </item>
 
