--- a/app/src/main/res/layout/activity_editor_settings.xml
+++ b/app/src/main/res/layout/activity_editor_settings.xml
@@ -5,7 +5,7 @@
     xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/code_editor_white"
+    android:background="@color/code_editor_dark"
     android:orientation="vertical"
     tools:context=".EditorSettingsActivity">
     <androidx.appcompat.widget.Toolbar
@@ -34,6 +34,7 @@
             android:layout_height="match_parent"
             android:gravity="center_vertical"
             android:layout_weight="5"
+            android:textColor="@color/bright_orange"
             android:textSize="20dp"
             android:text="Theme">
         </TextView>
@@ -53,6 +54,7 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:textColor="@color/bright_orange"
             android:gravity="center_vertical"
             android:layout_weight="5"
             android:textSize="20dp"
@@ -75,6 +77,7 @@
             android:layout_height="match_parent"
             android:layout_width="0dp"
             android:textSize="20dp"
+            android:textColor="@color/bright_orange"
             android:gravity="center_vertical"
             android:layout_weight="5"
             android:text="Font Size">
