--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LoginActivity">
+
   <ImageView
       android:id="@+id/logoImageView"
       android:layout_width="150dp"
@@ -17,37 +18,52 @@
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:srcCompat="@drawable/pigeonlogo" />
+  <TextView
+      android:id="@+id/appNameTextView"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="PseudoGen"
+      android:textAlignment="center"
+      android:textColor="@color/bright_orange"
+      android:textSize="34dp"
+      android:layout_marginTop="20dp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.5"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/logoImageView">
+  </TextView>
   <Button
       android:id="@+id/emailButton"
       android:layout_width="match_parent"
       android:layout_height="50dp"
-      android:layout_marginBottom="300dp"
       android:layout_marginLeft="15dp"
       android:layout_marginRight="15dp"
+      android:layout_marginBottom="300dp"
       android:adjustViewBounds="true"
+      android:backgroundTint="@color/fire_brick"
       android:drawableLeft="@drawable/emailsignin_icon"
       android:onClick="signInWithEmailClicked"
       android:scaleType="centerInside"
       android:text="Continue with email"
-      android:backgroundTint="@color/fire_brick"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintStart_toStartOf="parent" />
+
   <Button
       android:id="@+id/googleButton"
       android:layout_width="match_parent"
       android:layout_height="50dp"
-      android:layout_marginTop="20dp"
       android:layout_marginLeft="15dp"
+      android:layout_marginTop="20dp"
       android:layout_marginRight="15dp"
-      android:text="Continue with Google"
-      app:background="@drawable/googlesignin_button_shape"
+      android:adjustViewBounds="true"
       android:backgroundTint="@color/code_editor_white"
       android:drawableLeft="@drawable/googlesignin_image"
       android:onClick="signInWithGoogleClicked"
       android:scaleType="fitXY"
-      android:adjustViewBounds="true"
+      android:text="Continue with Google"
+      app:background="@drawable/googlesignin_button_shape"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintStart_toStartOf="parent"
@@ -56,12 +72,13 @@
       android:id="@+id/divider"
       android:layout_width="match_parent"
       android:layout_height="1dp"
-      android:paddingTop="10dp"
-      android:layout_marginTop="10dp"
       android:layout_marginLeft="15dp"
+      android:layout_marginTop="10dp"
       android:layout_marginRight="15dp"
-      app:layout_constraintTop_toBottomOf="@id/googleButton"
-      android:background="@android:color/darker_gray"/>
+      android:background="@android:color/darker_gray"
+      android:paddingTop="10dp"
+      app:layout_constraintTop_toBottomOf="@id/googleButton" />
+
   <Button
       android:id="@+id/guestButton"
       android:layout_width="match_parent"
@@ -69,42 +86,44 @@
       android:layout_marginLeft="15dp"
       android:layout_marginTop="20dp"
       android:layout_marginRight="15dp"
-      android:text="Continue as Guest"
-      android:onClick="signInAsGuestClicked"
-      android:backgroundTint="@color/code_editor_white"
-      android:scaleType="fitXY"
       android:adjustViewBounds="true"
-      app:layout_constraintTop_toBottomOf="@id/divider"
+      android:backgroundTint="@color/bright_orange"
+      android:onClick="signInAsGuestClicked"
+      android:scaleType="fitXY"
+      android:text="Continue as Guest"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.5"
-      app:layout_constraintStart_toStartOf="parent"/>
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/divider" />
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
+      android:layout_marginBottom="15dp"
       android:orientation="horizontal"
-      app:layout_constraintBottom_toBottomOf="parent"
-      android:layout_marginBottom="15dp">
+      app:layout_constraintBottom_toBottomOf="parent">
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:text="Privacy Policy"
+        android:layout_weight="5"
         android:clickable="true"
         android:onClick="privacyPolicyClicked"
-        android:textStyle="bold"
+        android:text="Privacy Policy"
+        android:textAlignment="center"
         android:textColor="@color/black"
-        android:layout_weight="5">
+        android:textStyle="bold">
     </TextView>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:text="Terms of Use"
-        android:onClick="termsOfUseClicked"
+        android:layout_weight="5"
         android:clickable="true"
-        android:textStyle="bold"
+        android:onClick="termsOfUseClicked"
+        android:text="Terms of Use"
+        android:textAlignment="center"
         android:textColor="@color/black"
-        android:layout_weight="5">
+        android:textStyle="bold">
     </TextView>
   </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
