--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -14,15 +14,16 @@
     </ImageView>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:orientation="vertical">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingTop="5dp"
             android:paddingLeft="16dp"
             android:fontFamily="@font/maven_pro_medium"
             android:textColor="@color/bright_orange"
-            android:textSize="20dp"
+            android:textSize="22dp"
             android:textStyle="bold"
             android:text="PseudoGen">
         </TextView>
@@ -36,11 +37,11 @@
         <TextView
             android:id="@+id/displayNameTextView"
             android:layout_width="match_parent"
-            android:paddingTop="5dp"
+            android:paddingTop="20dp"
             android:paddingLeft="16dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/maven_pro_medium"
-            android:textSize="14dp">
+            android:textSize="18dp">
         </TextView>
     </LinearLayout>
 </LinearLayout>
