--- a/app/src/main/res/layout/activity_challenges.xml
+++ b/app/src/main/res/layout/activity_challenges.xml
@@ -5,6 +5,7 @@
     xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:background="@color/code_editor_dark"
+    android:padding="15dp"
     android:layout_height="match_parent"
     tools:context=".ChallengesActivity">
     <com.google.android.gms.ads.AdView
